Colaboratory を使用して作成しました

--- a/chartmatha01probability1.ipynb
+++ b/chartmatha01probability1.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "chartmatha01probability1.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPPKg+qcxX6ogxyAkWVqz6B",
+      "authorship_tag": "ABX9TyPvrEx6DLmMLTEZGCBGcyGT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,81 +30,131 @@
         "id": "GsRxjb7ky1Rb"
       },
       "source": [
-        "# メモ\n",
-        "\n",
-        "チャート式数学 A の最初の場合の数と確率\n",
-        "\n",
-        "を読む。\n",
+        "# 数学 A 1.場合の数と確率\n",
         "\n"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bcYyItYWzVHS"
-      },
+      "cell_type": "code",
       "source": [
-        "# 集合"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "# a \\in A の意味は a は集合 A の要素である\n",
+        "# a \\not \\in A の意味は a は集合 A の要素ではない\n",
+        "# A \\subset B の意味は A は B の部分集合である\n",
+        "# x \\in A ならば x \\in B が成り立つ\n",
+        "# A = B A と B の要素が全く一致する時 A \\subset B かつ B \\subset A が成り立つ"
+      ],
       "metadata": {
         "id": "xoZ_k9cHzaOg"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "1. $a \\in A \\cdots \\cdots a $ は集合 $A$ の要素 $\\quad a \\not\\in A \\cdots \\cdots a $ は集合 $A$ の要素ではない\n",
-        "\n",
-        "1. $A \\subset B \\cdots \\cdots A$ は $B$ の部分集合 $\\quad x \\in A$ ならば $x \\in B$ が成り立つ。\n",
-        "\n",
-        "1. $A = B \\cdots \\cdots A$ と $B$ の要素は全く一致 $\\quad A \\subset B$ かつ $B \\subset A$ が成り立つ。\n"
+        "%%latex\n",
+        "a \\in A \\\\\n",
+        "a \\not\\in A \\\\\n",
+        "A \\subset B \\\\\n",
+        "x \\in A \\Rightarrow x \\in B \\\\\n",
+        "A = B \\Rightarrow A \\subset B \\land B \\subset A"
+      ],
+      "metadata": {
+        "id": "SugLv8fQGxvG",
+        "outputId": "a5a95dc3-fa0f-41b5-dd92-68b783e19a3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "a \\in A \\\\\na \\not\\in A \\\\\nA \\subset B \\\\\nx \\in A \\Rightarrow x \\in B \\\\\nA = B \\Rightarrow A \\subset B \\land B \\subset A"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# 集合を構成しているものを、その集合の要素または元という\n",
+        "# a \\in A のとき、a は集合 A に属するという\n",
+        "# 集合 A の a については必ず a \\in A, a \\not \\in A のどちらか一方が成り立つ\n",
+        "# A \\subset B (A は B の部分集合) のとき、A は B に含まれる、または B は A を含む、という\n",
+        "# A 自身も A の部分集合である。 すなわち、A \\subset A である"
+      ],
       "metadata": {
         "id": "lxdqNwKn1Jg_"
       },
-      "source": [
-        "集合を構成しているものを、その集合の要素または元という。  \n",
-        "$a \\in A$ のとき、$a$ は集合 $A$ に属するという。  \n",
-        "集合 $A$ の $a$ については必ず $a \\in A, a \\not\\in A$ のどちらか一方が成り立つ。  \n",
-        "\n",
-        "$A \\subset B$ ($A$ は $B$ の部分集合) のとき、$A$ は $B$ に含まれる、または $B$ は $A$ を含む、という。\n",
-        "なお、$A$ 自身も $A$ の部分集合である。 すなわち、$A \\subset A$ である。"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# 集合の表現\n",
+        "# 1から 9までの奇数全体の集合を A とする７と、A には次のような表し方がある。\n",
+        "# 列挙する A = {1,3,5,7,9}\n",
+        "# A = \\{expression|condition\\}$ の形 <= 内包表記 list comprehension\n",
+        "# A = \\{x|1 \\leq x \\leq 9, x は奇数\\}\n",
+        "# A = \\{2n-1|1 \\leq n \\leq 5, n は整数 \\}\n",
+        "# 100以下の正の奇数全体の集合 \\quad \\{1,3,5,\\cdots \\cdots, 99\\}\n",
+        "# 正の偶数全体の集合 \\{2,4,6,\\cdots \\cdots\\}$"
+      ],
       "metadata": {
         "id": "VGRc2HQl23RH"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "**集合の表現**\n",
-        "\n",
-        "1から 9までの奇数全体の集合を $A$ とする７と、$A$ には次のような表し方がある。\n",
-        "\n",
-        "1. 列挙する $A = {1,3,5,7,9}$  \n",
-        "\n",
-        "1. $A = \\{x|1 \\leq x \\leq 9, x は奇数\\}$  \n",
-        "\n",
-        "1. $A = \\{2n-1|1 \\leq n \\leq 5, n は整数 \\}$\n",
-        "\n",
-        "**略記記号 $\\cdots \\cdots$**\n",
-        "\n",
-        "100以下の正の奇数全体の集合 $\\quad \\{1,3,5,\\cdots \\cdots, 99\\}$  \n",
-        "\n",
-        "正の偶数全体の集合 $\\quad \\{2,4,6,\\cdots \\cdots\\}$"
+        "%%latex\n",
+        "A = {1,3,5,7,9} \\\\\n",
+        "A = \\{expression|condition\\} \\\\\n",
+        "A = \\{x|1 \\leq x \\leq 9, x は奇数\\} \\\\\n",
+        "A = \\{2n-1|1 \\leq n \\leq 5, n は整数 \\} \\\\\n",
+        "\\{1,3,5,\\cdots \\cdots, 99\\} \\\\\n",
+        "\\{2,4,6,\\cdots \\cdots\\}"
+      ],
+      "metadata": {
+        "id": "jylLBLgILX_z",
+        "outputId": "edd507e9-53ad-4c77-c096-44757eb8b308",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "A = {1,3,5,7,9} \\\\\nA = \\{expression|condition\\} \\\\\nA = \\{x|1 \\leq x \\leq 9, x は奇数\\} \\\\\nA = \\{2n-1|1 \\leq n \\leq 5, n は整数 \\} \\\\\n\\{1,3,5,\\cdots \\cdots, 99\\} \\\\\n\\{2,4,6,\\cdots \\cdots\\}"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ILcBDPnH4QlV"
-      },
       "source": [
-        "上の $A = \\{expression|condition\\}$ の形はプログラミングででてくるリスト内包表記 list comprehension の形と同じだね!!!!"
-      ]
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "PwN1Ib-mMfyM"
+      }
     },
     {
       "cell_type": "markdown",
@@ -393,7 +442,7 @@
         "E = U.difference(A).union(U.difference(B))\n",
         "print(D.issubset(E))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +496,7 @@
         "print((A.intersection(B)).union(C))\n",
         "print((A.intersection(C)).union(B.intersection(C)))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
