--- a/jprogramminglanguage.ipynb
+++ b/jprogramminglanguage.ipynb
@@ -6,7 +6,7 @@
       "name": "jprogramminglanguage.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNwPkyK5mD42JczyoK/Cqz",
+      "authorship_tag": "ABX9TyP7AwIikiRCHFYWuRckKW9I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# j programming language をインストールする\n",
         "%%capture\n",
         "!wget http://www.jsoftware.com/download/j903/install/j903_linux64.tar.gz\n",
         "!tar xzf j903_linux64.tar.gz"
@@ -47,22 +48,47 @@
       "metadata": {
         "id": "x6_boXDVsFH0"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!./j903/bin/jconsole -js \"echo 'Hello world'\" \"exit 0\""
+        "# とりあえず echo で標準入力から入力して標準出力に出してみよう\n",
+        "!echo \"3 + 3\" | ./j903/jconsole.sh"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IdrobbS8sw5W",
+        "outputId": "7e3e1ee6-45de-4b43-a026-476c73351482"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# こんなやり方もあるが使わない\n",
+        "!./j903/jconsole.sh -js \"echo 'Hello world'\" \"exit 0\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hFJdhQzssKAL",
-        "outputId": "7d4f1879-179e-4481-c784-448b4268ae3d"
+        "outputId": "2041ee77-0b97-4d8a-eb13-ca68fd2387e6"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,25 +102,116 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo \"3 + 3\" | ./j903/bin/jconsole"
+        "# 四則演算あたりから始めてみよう\n",
+        "!echo \"3 * 100\" | ./j903/jconsole.sh\n",
+        "!echo \"3 - 138\" | ./j903/jconsole.sh"
       ],
       "metadata": {
+        "id": "_zsKrFBf0wFP",
+        "outputId": "2aabc1ac-db96-451a-9069-27850d759ffe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "IdrobbS8sw5W",
-        "outputId": "cb368a41-4945-4960-a847-9aa337d8d0a3"
+        }
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6\n"
+            "300\n",
+            "_135\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 引き算のマイナスと負の記号のマイナスは区別する\n",
+        "# 負の記号の場合括弧で括るかアンダーバーを使う\n",
+        "!echo \"3  + (-80)\" | ./j903/jconsole.sh\n",
+        "!echo \"3  + _80\" | ./j903/jconsole.sh"
+      ],
+      "metadata": {
+        "id": "TadkQmC41CMD",
+        "outputId": "5926baa7-26f0-4905-d783-0aa7a1aeb22d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "_77\n",
+            "_77\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 普通の割り算(少数割り算)が % \n",
+        "!echo \"3 % 4\" | ./j903/jconsole.sh #=> 0.75"
+      ],
+      "metadata": {
+        "id": "t8ciT6Th2GgI",
+        "outputId": "b2ed0ff3-fe54-4456-e211-5250ebf50b25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.75\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 普通の割り算(少数割り算)が % \n",
+        "!echo -e \"X <  4 1.1 3 6\\n+/X\" | ./j903/jconsole.sh #=> 0.75"
+      ],
+      "metadata": {
+        "id": "jAauSPu12K6A",
+        "outputId": "c88a6cd0-bbcd-4d64-edd4-e0649b470691",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "|value error: X\n",
+            "|       X<4 1.1 3 6\n",
+            "+/ X\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_nQabPFz3Cqu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
