Colaboratory を使用して作成しました

--- a/jprogramminglanguage.ipynb
+++ b/jprogramminglanguage.ipynb
@@ -6,7 +6,7 @@
       "name": "jprogramminglanguage.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMDvMB5i664Bj87WBbSMaaG",
+      "authorship_tag": "ABX9TyMVtcJcAqrwvYjM7+sabL2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "id": "IdrobbS8sw5W",
         "outputId": "7e3e1ee6-45de-4b43-a026-476c73351482"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "id": "hFJdhQzssKAL",
         "outputId": "2041ee77-0b97-4d8a-eb13-ca68fd2387e6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "id": "_zsKrFBf0wFP",
         "outputId": "2aabc1ac-db96-451a-9069-27850d759ffe"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "TadkQmC41CMD",
         "outputId": "5926baa7-26f0-4905-d783-0aa7a1aeb22d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "id": "t8ciT6Th2GgI",
         "outputId": "b2ed0ff3-fe54-4456-e211-5250ebf50b25"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "id": "_nQabPFz3Cqu",
         "outputId": "2606b592-88e5-4347-be68-772fdc7cf952"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +339,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +435,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,35 +569,153 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 冪乗\n",
+        "!echo -e '2 ^ 3' | ./j903/jconsole.sh "
       ],
       "metadata": {
-        "id": "2N8mf3O7bple"
+        "id": "2N8mf3O7bple",
+        "outputId": "5ac594e1-d8f7-4640-efcf-41b12f10f4aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# リスト計算\n",
+        "!echo -e '*: 1 2 3 4' | ./j903/jconsole.sh "
       ],
       "metadata": {
-        "id": "VVDmLHbcbpgz"
+        "id": "VVDmLHbcbpgz",
+        "outputId": "b53ead0e-5f3c-459f-d6cb-44756d5e1aa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 4 9 16\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# リスト同士の足し算\n",
+        "!echo -e '1 2 3 + 10 20 30' | ./j903/jconsole.sh "
       ],
       "metadata": {
-        "id": "mvIv2uL_bpb9"
+        "id": "mvIv2uL_bpb9",
+        "outputId": "c26ed26b-7809-44f0-de1b-3d4d2685148c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11 22 33\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e '1 + 10 20 30' | ./j903/jconsole.sh\n",
+        "!echo -e '1 2 3 + 10' | ./j903/jconsole.sh "
+      ],
+      "metadata": {
+        "id": "Mh5OBTQY3PTi",
+        "outputId": "0c96d3df-6d6b-46af-f244-aa984bf5b403",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11 21 31\n",
+            "11 12 13\n",
+            "|length error\n",
+            "|   1 2    +10 20 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# remainder (mod) is | 縦棒\n",
+        "!echo -e '2 | 0 1 2 3 4 5 6 7' | ./j903/jconsole.sh\n",
+        "!echo -e '3 | 0 1 2 3 4 5 6 7' | ./j903/jconsole.sh "
+      ],
+      "metadata": {
+        "id": "nIaOGgmN3Pha",
+        "outputId": "fd4205f5-cbaa-4b76-f535-a8d0b8328b58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 0 1 0 1 0 1\n",
+            "0 1 2 0 1 2 0 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 二項動詞の前後どちらが先か\n",
+        "!echo -e '0 1 2 3 4 5 6 7 | 2' | ./j903/jconsole.sh\n",
+        "!echo -e '0 1 2 3 4 5 6 7 | 3' | ./j903/jconsole.sh "
+      ],
+      "metadata": {
+        "id": "A__KHFLD3PtK",
+        "outputId": "5f9cf609-8dd9-4b72-c7e5-fb3bcbf80326",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 0 0 2 2 2 2 2\n",
+            "3 0 1 0 3 3 3 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
