Colaboratory を使用して作成しました

--- a/jprogramminglanguage.ipynb
+++ b/jprogramminglanguage.ipynb
@@ -6,7 +6,7 @@
       "name": "jprogramminglanguage.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOVG2VAEfBNLeBw8/3gHGhw",
+      "authorship_tag": "ABX9TyMTUCL3523HOTwK6ljI05gn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "x6_boXDVsFH0"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "id": "WvgfJPvoy-ZH",
         "outputId": "9a961c72-1424-4ee7-e5e7-00801688de22"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
         "id": "EV8xHYaLzcLC",
         "outputId": "cb8ae13f-cd44-4c72-99f5-a03f6a7b7c82"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "id": "IdrobbS8sw5W",
         "outputId": "e0404f0f-99e2-460f-a18f-5f7f5feddd7b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
         "id": "_zsKrFBf0wFP",
         "outputId": "a170a7a1-e9ab-434f-85ab-70d629746fa5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "id": "33_Z7UcC0WHn",
         "outputId": "1aa790e5-5e8d-4ab7-bdc6-edd9d8e09715"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
         "id": "TadkQmC41CMD",
         "outputId": "2b67a4a4-b1e4-4165-868f-1bb5455b1993"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "id": "ltQFD_pA0lQN",
         "outputId": "3de6dfcb-efd4-46a2-9a78-952621389011"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "id": "t8ciT6Th2GgI",
         "outputId": "ea5da375-ec13-4629-ea91-612ed57eed3b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
         "id": "gUlD6Fwn04if",
         "outputId": "47b73793-ee25-40d4-9ee7-e7403d5a7325"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
         "id": "VJxgXZop1iso",
         "outputId": "71306e8f-ab3c-4033-ac82-a8cdfd47579b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
         "id": "u53manzK1yh-",
         "outputId": "ffcc5356-8569-46e2-f036-aee42b9d4b8a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +449,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
         "id": "rqpFw28X2GbG",
         "outputId": "ac885ff1-1f6e-418c-fc27-603c75707f33"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +546,7 @@
         "id": "CQjbpCDh2VR-",
         "outputId": "18a6f393-cea3-4940-ede5-343b17a3488b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +573,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +596,7 @@
         "id": "1nVjLpi-2jrG",
         "outputId": "112dba5a-0be8-42e6-9666-8b8f5854e6c8"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +626,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
         "id": "jA65ejZr2sSd",
         "outputId": "f1365991-3e74-47ae-d2ed-d02af0aa4a39"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,7 +677,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +700,7 @@
         "id": "lrFSjYow227B",
         "outputId": "3ac915c0-9176-4fad-b31b-49aebdf09be6"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +752,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -876,7 +876,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +903,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +953,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -976,7 +976,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,7 +1006,7 @@
         "id": "ZKelt-VTue4v",
         "outputId": "d25f62cf-fbaa-4e35-f4af-279987cfc69f"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1029,7 @@
         "id": "pSpE7Rkeue1R",
         "outputId": "f3b6f6b7-618b-4a36-b5d9-cb93636f9237"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1060,7 @@
         "id": "384diOD3uew9",
         "outputId": "c7445837-bab8-4036-b889-dd17dd790082"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,7 +1083,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,12 +1110,12 @@
       ],
       "metadata": {
         "id": "5O3C6z938MQw",
-        "outputId": "8105a474-0d3c-43b6-cc57-86aff7a317f2",
+        "outputId": "38eb020c-e8b0-4b92-90cc-42c0c2d3f313",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 92,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1151,13 +1151,30 @@
       "source": [
         "# スペースは必要ないが\n",
         "# 数字と文字の間のスペースと動詞の語尾変化に使われるドットとコロンの前後のスペースは必要な場合がある\n",
-        "%%writefile temp.ijs"
+        "%%writefile temp.ijs\n",
+        "2+3\n",
+        ";:'2+3'\n",
+        "plus =.+\n",
+        ";:'2plus3'\n",
+        ";:'a.b'"
       ],
       "metadata": {
-        "id": "llKAyGg79WQ7"
+        "id": "llKAyGg79WQ7",
+        "outputId": "2ec62fa9-0e9b-4865-93ba-af450eef0e73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ijs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1166,6 +1183,94 @@
       ],
       "metadata": {
         "id": "8ZaUJpPE9WMd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 優先順位 pecedence はない\n",
+        "# 右から評価する\n",
+        "%%writefile temp.ijs\n",
+        "2 * 3 + 4\n",
+        "10 - 4 - 3\n",
+        "10 - 4 - 3 - 1\n",
+        "- - - 4\n",
+        "2 * 4 + 5\n",
+        "2 + 4 * 5\n",
+        "2 - 4 - 5\n",
+        "8 % 2 + 2"
+      ],
+      "metadata": {
+        "id": "LfNSimyzJSem",
+        "outputId": "edc40e3b-9780-4258-d5f0-6e33af039bab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ijs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat temp.ijs |./j903/jconsole.sh"
+      ],
+      "metadata": {
+        "id": "AT2JJ10GJSbO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "EIOcR5UhJSYB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5Vsr2cOmLpEx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "935SaD6bLo74"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1EBzflGFJSUV"
       },
       "execution_count": null,
       "outputs": []
