--- a/jprogramminglanguage.ipynb
+++ b/jprogramminglanguage.ipynb
@@ -6,7 +6,7 @@
       "name": "jprogramminglanguage.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMTUCL3523HOTwK6ljI05gn",
+      "authorship_tag": "ABX9TyNJwiAk9XD13QR1Q8DjvLVG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1138,15 +1138,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "A73Xn6UubtiM"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# スペースは必要ないが\n",
@@ -1160,10 +1151,10 @@
       ],
       "metadata": {
         "id": "llKAyGg79WQ7",
-        "outputId": "2ec62fa9-0e9b-4865-93ba-af450eef0e73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2ec62fa9-0e9b-4865-93ba-af450eef0e73"
       },
       "execution_count": 14,
       "outputs": [
@@ -1203,11 +1194,11 @@
         "8 % 2 + 2"
       ],
       "metadata": {
-        "id": "LfNSimyzJSem",
-        "outputId": "edc40e3b-9780-4258-d5f0-6e33af039bab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LfNSimyzJSem",
+        "outputId": "edc40e3b-9780-4258-d5f0-6e33af039bab"
       },
       "execution_count": 29,
       "outputs": [
@@ -1232,9 +1223,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "A73Xn6UubtiM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "# 関数定義 verb defiition"
       ],
       "metadata": {
         "id": "EIOcR5UhJSYB"
@@ -1256,7 +1256,44 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "Let's assume that the problem is to convert temperatures between \n",
+        "Fahrenheit and centigrade. You need to define a verb that does that.\n",
+        "\n",
+        "The following is a definition of the verb centigrade that will convert \n",
+        "its argument from a Fahrenheit value to a centigrade value.\n",
+        "   centigrade =. 3 : 0\n",
+        "t1 =. y - 32\n",
+        "t2 =. t1 * 5\n",
+        "t3 =. t2 % 9\n",
+        ")\n",
+        "At this point you want to do something that works, rather than deal with problems arising from typos, so transcribe it carefully.\n",
+        "\n",
+        "In the ijx window enter the first line:\n",
+        "\n",
+        "   centigrade =. 3 : 0\n",
+        "Type it exactly as shown. There must be a blank between the 3 and the : . The 3 indicates that you are defining a verb and the 0 indicates that the definition is in the subsequent input lines.\n",
+        "\n",
+        "After you enter the above line the caret is at the left margin and has not been indented the three spaces as it normally is. This indicates that the system is waiting for you to enter the rest of the definition.\n",
+        "\n",
+        "Type in the lines following the definition of centigrade as shown. They are at the left margin, and so look like they might have been displayed by the system, but in fact they are your entries of the lines required to define the verb.\n",
+        "\n",
+        "The final line that contains just the ) ends this special definition input mode. After you enter this final line, the system again indents the three spaces indicating that it is ready to execute a sentence.\n",
+        "\n",
+        "If you entered the definition correctly, you should be able to experiment with your new verb.\n",
+        "   centigrade 32\t\n",
+        "0\n",
+        "   centigrade _40\n",
+        "_40\n",
+        "   centigrade 212\n",
+        "100\n",
+        "Let's look at the definition to understand how it works. The y in the first sentence of the definition is the name of the argument of the verb. When you execute the verb with an argument the first line will subtract 32 from the argument and define t1. When the first line is finished, execution proceeds to the next line, which defines t2 as the result of t1 times 5. Execution proceeds to the next line and defines t3 as t2 divided by 9. There are no more lines, so the execution of the verb is finished. The result of the verb is the last result that was evaluated.\n",
+        "\n",
+        "We used 3 : 0 to define the verb. The phrase verb define is equivalent and some find it easier to read. However, it hides information and we will use the 3 : 0 form.\n",
+        "\n",
+        "   centrigrade =. verb define\n",
+        ". . .\n",
+        ")\n",
+        ">>  <<  Usr  Pri  JfC  LJ  Phr  Dic  Voc  !:  Help  Primer"
       ],
       "metadata": {
         "id": "935SaD6bLo74"
@@ -1267,7 +1304,52 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        ">>  <<  Usr  Pri  JfC  LJ  Phr  Dic  Voc  !:  Help  Primer\n",
+        "Monad and dyad definition\n",
+        "As discussed in the earlier section on ambivalence, all verbs had two definitions, a monad and a dyad. You have defined only a monad for centigrade. What about the dyad?\n",
+        "   23 centigrade 32\n",
+        "|domain error\n",
+        "|   23     centigrade 32\n",
+        "Since you didn't provide a dyad definition, it is empty and this is treated as if the dyad had no arguments in its domain, and any arguments you give will cause a domain error.\n",
+        "\n",
+        "Let's examine some simple examples of defining dyadic, monadic, and both cases.\n",
+        "   monadminus =. 3 : 0\n",
+        "- y\n",
+        ")\n",
+        "   monadminus 5\n",
+        "_5\n",
+        "   5 monadminus 3\n",
+        "|domain error\n",
+        "|   5     monadminus 3\n",
+        "The above defines the monad of the verb named monadminus. Applying it monadically works and applying it dyadically fails.\n",
+        "\n",
+        "In one-line definitions like this you can take a shortcut and make the definition on a single line and avoid entering the special input mode that needs to be ended with the ). The following is an equivalent way of doing the above definition:\n",
+        "   monadminus =. 3 : '- y'\n",
+        "The string contains the single line that makes up the definition. It is provided directly as the right argument of : instead of the 0 used earlier.\n",
+        "\n",
+        "So far you have defined just the monadic case of a verb. You can also define a verb with just a dyadic definition. Instead of 3 as the left argument to : use a 4 to define the dyadic case.\n",
+        "   dyadminus =. 4 : 'x - y'\n",
+        "   5 dyadminus 3\n",
+        "2\n",
+        "   dyadminus 5\n",
+        "|domain error\n",
+        "|       dyadminus 5\n",
+        "In the monad case the y name is the right argument and in the dyad case x is the left argument and y is the right.\n",
+        "\n",
+        "What if you want to define both cases of a verb?\n",
+        "   minus =. 3 : 0\n",
+        "- y\n",
+        ":\n",
+        "x - y\n",
+        ")\n",
+        "The : by itself on a line separates the monad and dyad definitions.\n",
+        "   3 minus 5\n",
+        "_2\n",
+        "   5 minus 3\n",
+        "2\n",
+        "   minus 5\n",
+        "_5\n",
+        ">>  <<  Usr  Pri  JfC  LJ  Phr  Dic  Voc  !:  Help  Primer"
       ],
       "metadata": {
         "id": "1EBzflGFJSUV"
