Colaboratory を使用して作成しました

--- a/chartmatha01probability1.ipynb
+++ b/chartmatha01probability1.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmatha01probability1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9QzgxeRuvtzqNbNuUbN9C",
+      "authorship_tag": "ABX9TyMnW/j4WvaODKiYTYF//ryz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -811,7 +811,7 @@
           "height": 169
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,7 +893,7 @@
           "height": 82
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -926,7 +926,9 @@
         "# A の起こり方が m 通り、B の起こり方が n 通りとすると\n",
         "# A または B のどちらかが起こる場合の数は m + n 通りである\n",
         "# 積の法則\n",
-        "# "
+        "# 2 つの事柄 A, B があって、A の起こり方は m 通りあり、\n",
+        "# その各々の場合について、B の起こり方が n 通りずつあるならば\n",
+        "# A と B が共に起こる場合の数は mn 通りである。"
       ],
       "metadata": {
         "id": "KqIsExaL8oN8"
@@ -937,7 +939,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# p.234 順列\n",
+        "# 異なる"
       ],
       "metadata": {
         "id": "4ErqG4nm8oDT"
@@ -948,22 +951,59 @@
     {
       "cell_type": "code",
       "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "_nP_r=n(n-1)(n-2)\\cdots\\cdots(n-r+1)=\\frac{n!}{(n-r)!} \\\\\n",
+        "\\\\\n",
+        "_nP_n=n(n-1)(n-2)\\cdots\\cdots3\\cdot2\\cdot1 \\\\\n",
+        "\\\\\n",
+        "0!=1 \\\\\n",
+        "\\\\\n",
+        "_nP_0=1"
+      ],
+      "metadata": {
+        "id": "KG4rT2yb8n6b",
+        "outputId": "f7080d7e-2e0f-4cd3-910f-2106a15d86f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n_nP_r=n(n-1)(n-2)\\cdots\\cdots(n-r+1)=\\frac{n!}{(n-r)!} \\\\\n\\\\\n_nP_n=n(n-1)(n-2)\\cdots\\cdots3\\cdot2\\cdot1 \\\\\n\\\\\n0!=1 \\\\\n\\\\\n_nP_0=1"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "KG4rT2yb8n6b"
+        "id": "ax_CbCQuVyza"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Xc3FHDG0_dHT"
-      },
+      "cell_type": "code",
       "source": [
-        "# いまここ p.221"
-      ]
+        ""
+      ],
+      "metadata": {
+        "id": "u4VLodcFVzNH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
