Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOsV5lSsCOVOWQ+eXQcIb4s",
+      "authorship_tag": "ABX9TyP0QPTUyll2ab3vniRl7gvr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,27 +40,178 @@
       "cell_type": "code",
       "source": [
         "# gacha_complete\n",
-        "# 学生さんはきちんと考えてくれる性格で、数日してから漸化式を提案 してくれ、さらにプログラムも出してくれました。かなりエレガント できちんとしております。\n",
         "# おまけの種類 n種類 \n",
-        "# すでに手にいれている種類 m種類(＜n)\n",
-        "# 残りの開けていない箱の数 l個\n",
-        "\n",
-        "# として、全種類ゲットできる確率fは\n",
-        "\n",
-        "# n-m>l -> f=0\n",
-        "\n",
-        "# n-m=0 -> f=1\n",
-        "\n",
-        "\n",
+        "# すでに手にいれている種類 m 種類(＜n)\n",
+        "# 残りの開けていない箱の数 l 個\n",
+        "# n - m > l -> f=0\n",
+        "# n - m = 0 -> f=1\n",
         "# f(n,m,l)= (n-m)/n*f(n,m+1,l-1) + m/n*f(n,m,l-1)\n",
-        "\n",
-        "\n",
         "#            当たときの確率      +  はずした時の確率\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "#define N 15\n",
+        "#define L 100\n",
         "\n",
-        "# これを解く、プログラムは以下の通りです。\n",
+        "double Data[N+1][N+1][L+1];\n",
         "\n",
+        "double f(int n,int m,int l) {\n",
+        "\tif(Data[n][m][l]>=0) return Data[n][m][l];\n",
+        "\tif(n-m>l)return 0;\n",
+        "\tif(n==m)return 1;\n",
+        "\t\n",
+        "\tData[n][m][l]=(double)(f(n,m+1,l-1)*(n-m)/n+f(n,m,l-1)*m/n);\n",
+        "\treturn Data[n][m][l];\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "\tint i,j,k;\n",
+        "\tint l;\n",
+        "\tfor(i=0;i<=N;i++)for(j=0;j<=N;j++)for(k=0;k<=L;k++)\n",
+        "\t\tData[i][j][k]=-1;\n",
+        "\tfor(l=15;l<=L;l++){\n",
+        "\t\tprintf(\"%2d %2d %f\\n\",N,l,f(N,0,l));\n",
+        "\t}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "oZJbjPgixS2K",
+        "outputId": "cf1babda-f0f2-4438-89d8-a97a2b9da31a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "SkoLxof-xvwr",
+        "outputId": "6d7f4ad6-98c0-462e-ae44-70f13d2f80c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15 15 0.000003\n",
+            "15 16 0.000024\n",
+            "15 17 0.000104\n",
+            "15 18 0.000325\n",
+            "15 19 0.000821\n",
+            "15 20 0.001779\n",
+            "15 21 0.003431\n",
+            "15 22 0.006041\n",
+            "15 23 0.009880\n",
+            "15 24 0.015211\n",
+            "15 25 0.022265\n",
+            "15 26 0.031227\n",
+            "15 27 0.042226\n",
+            "15 28 0.055332\n",
+            "15 29 0.070552\n",
+            "15 30 0.087836\n",
+            "15 31 0.107085\n",
+            "15 32 0.128155\n",
+            "15 33 0.150871\n",
+            "15 34 0.175034\n",
+            "15 35 0.200427\n",
+            "15 36 0.226829\n",
+            "15 37 0.254018\n",
+            "15 38 0.281775\n",
+            "15 39 0.309893\n",
+            "15 40 0.338178\n",
+            "15 41 0.366451\n",
+            "15 42 0.394550\n",
+            "15 43 0.422330\n",
+            "15 44 0.449666\n",
+            "15 45 0.476448\n",
+            "15 46 0.502587\n",
+            "15 47 0.528004\n",
+            "15 48 0.552641\n",
+            "15 49 0.576450\n",
+            "15 50 0.599395\n",
+            "15 51 0.621452\n",
+            "15 52 0.642608\n",
+            "15 53 0.662856\n",
+            "15 54 0.682197\n",
+            "15 55 0.700641\n",
+            "15 56 0.718198\n",
+            "15 57 0.734888\n",
+            "15 58 0.750730\n",
+            "15 59 0.765750\n",
+            "15 60 0.779972\n",
+            "15 61 0.793424\n",
+            "15 62 0.806136\n",
+            "15 63 0.818137\n",
+            "15 64 0.829457\n",
+            "15 65 0.840127\n",
+            "15 66 0.850176\n",
+            "15 67 0.859635\n",
+            "15 68 0.868532\n",
+            "15 69 0.876896\n",
+            "15 70 0.884754\n",
+            "15 71 0.892135\n",
+            "15 72 0.899063\n",
+            "15 73 0.905564\n",
+            "15 74 0.911661\n",
+            "15 75 0.917378\n",
+            "15 76 0.922737\n",
+            "15 77 0.927758\n",
+            "15 78 0.932461\n",
+            "15 79 0.936866\n",
+            "15 80 0.940990\n",
+            "15 81 0.944851\n",
+            "15 82 0.948463\n",
+            "15 83 0.951844\n",
+            "15 84 0.955006\n",
+            "15 85 0.957964\n",
+            "15 86 0.960730\n",
+            "15 87 0.963317\n",
+            "15 88 0.965735\n",
+            "15 89 0.967996\n",
+            "15 90 0.970109\n",
+            "15 91 0.972084\n",
+            "15 92 0.973930\n",
+            "15 93 0.975654\n",
+            "15 94 0.977266\n",
+            "15 95 0.978771\n",
+            "15 96 0.980178\n",
+            "15 97 0.981492\n",
+            "15 98 0.982719\n",
+            "15 99 0.983866\n",
+            "15 100 0.984936\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# gacha_complete\n",
+        "# おまけの種類 n種類 \n",
+        "# すでに手にいれている種類 m 種類(＜n)\n",
+        "# 残りの開けていない箱の数 l 個\n",
+        "# n - m > l -> f=0\n",
+        "# n - m = 0 -> f=1\n",
+        "# f(n,m,l)= (n-m)/n*f(n,m+1,l-1) + m/n*f(n,m,l-1)\n",
+        "#            当たときの確率      +  はずした時の確率\n",
         "#include \n",
-        "\n",
         "#define N 15\n",
         "#define L 100\n",
         "\n",
